--- a/app/src/main/res/layout/activity_easy_game.xml
+++ b/app/src/main/res/layout/activity_easy_game.xml
@@ -29,6 +29,14 @@
             android:textSize="20dp" />
 
         <TextView
+            android:id="@+id/easy_score"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:gravity="center" />
+
+        <TextView
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
