--- a/app/src/main/res/layout/activity_hard_game.xml
+++ b/app/src/main/res/layout/activity_hard_game.xml
@@ -26,7 +26,13 @@
             android:layout_weight="1"
             android:text="00:00"
             android:textSize="20dp" />
-
+        <TextView
+            android:id="@+id/hard_score"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:gravity="center" />
         <TextView
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
