--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,9 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_height="435dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -26,7 +27,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-
         <TextView
             android:id="@+id/text_title"
             android:layout_width="280dp"
@@ -42,7 +42,6 @@
             android:text="Enter your name:"
             android:textSize="20dp" />
 
-
         <EditText
             android:id="@+id/nameText"
             android:layout_width="186dp"
@@ -54,38 +53,59 @@
             android:inputType="textPersonName"
             app:layout_constraintLeft_toLeftOf="parent" />
 
-
         <TextView
             android:layout_width="178dp"
             android:layout_height="wrap_content"
             android:text="Enter your age:"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/ageText"
             android:layout_width="186dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:ems="10"
-            android:inputType="number"
-            android:layout_marginBottom="30dp"/>
+            android:inputType="number" />
 
         <Button
             android:id="@+id/button_start"
             android:layout_width="195dp"
             android:layout_height="60dp"
             android:text="@string/start_button"
-            android:textSize="25dp"
-            />
+            android:textSize="25dp" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="109dp"
-            android:layout_height="79dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/cat_icon"
-            android:layout_marginTop="40dp"/>
-
-
+        <TextView
+            android:id="@+id/location_text_view"
+            android:layout_width="178dp"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20dp" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+     />
+
+
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:menu="@menu/bottom_navigator"
+        android:background="?android:attr/windowBackground"/>
+
+
+
+</RelativeLayout>
