--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -26,6 +26,13 @@
             android:layout_weight="1"
             android:text="00:00"
             android:textSize="20dp" />
+        <TextView
+            android:id="@+id/medium_score"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/textViewName"
@@ -51,6 +58,9 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.757">
 
+
+
     </GridLayout>
+
 
 </android.support.constraint.ConstraintLayout>
